# scim-input-pad

./: ChangeLog  Makefile.am  README  configure.ac
data/: Makefile.am  arabian.pad.in  armenian.pad.in  balinese.pad.in  buginese.pad.in  cham.pad.in  chinese.pad.in  ethiopic.pad.in  georgian.pad.in  hebrew.pad.in  india_bengali.pad.in  india_chiki.pad.in  india_devanagari.pad.in  india_gujarati.pad.in  india_gurmukhi.pad.in  india_kannada.pad.in  india_lepcha.pad.in  india_limbu.pad.in  india_malayalam.pad.in  india_oriya.pad.in  india_saurashtra.pad.in  india_sinhala.pad.in  india_syloti_nagri.pad.in  india_tamil.pad.in  india_telugu.pad.in  japanese.pad.in  kaya.pad.in  kharoshthi.pad.in  khmer.pad.in  korean.pad.in  lao.pad.in  mongolian.pad.in  myanmar.pad.in  philipine_buhid.pad.in  philipine_hanunoo.pad.in  philipine_tagalog.pad.in  rejang.pad.in  russian.pad.in  sundanese.pad.in  tai_le.pad.in  (+3 more)
po/: LINGUAS  nl.po
src/: Makefile.am  scim_input_pad.cpp
